# freeswitch-telnyx

./: configure.ac
src/mod/applications/mod_telnyx_demo/: Makefile.am  mod_telnyx_demo.c
src/mod/endpoints/mod_sofia/: mod_sofia.c  mod_sofia.h  sofia.c
